apps/guestbook/frontend/networking/allow-egress-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-egress-allow-dns
  namespace: guestbook-frontend
spec:
  podSelector:
    matchLabels:
      app: guestbook-frontend
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector: {}
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
