apps/guestbook/frontend/networking/allow-egress-to-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: guestbook-frontend
spec:
  podSelector:
    matchLabels:
      app: guestbook-frontend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: guestbook-backend
    ports:
    - protocol: TCP
      port: 8080
